--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "FiniteFields"]
-	path = FiniteFields
+[submodule "CSR/FiniteFields"]
+	path = CSR/FiniteFields
 	url = https://github.com/K0lba/FiniteFields
