--- a/GeneratorTests/GeneratorTests.csproj
+++ b/GeneratorTests/GeneratorTests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CSR\CRS.csproj" />
+    <ProjectReference Include="..\CRS\CRS.csproj" />
   </ItemGroup>
 
 </Project>
